# UIInspector

./: CMakeLists.txt  LICENSE  README.md
src/: mainwindow.cpp  mainwindow.h  uiainspector.cpp  uiainspector.h
